<resources>
    <string name="app_name">Boundless</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="hint_name">Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone (Optional)</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_login">Log In</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter password</string>
    <string name="success_message_registration">Registration Successful</string>
    <string name="text_not_member">Create an account</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email already exists</string>
    <string name="error_password_match">Password does not matches</string>
    <string name="error_valid_password">Wrong email or password</string>
    <string name="title_activity_barcode_controller_test">BarcodeControllerTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
