<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <!--tools:context=".activities.LoginActivity">-->

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="25sp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_height="190dp"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_user"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorText"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorText"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input__user_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorText"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorText"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextHint"
            android:text="@string/text_login"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:clickable="true"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>