<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:background="@drawable/guy"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--tools:context="activities.LoginActivity">-->

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_height="130dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorTextHintReg"
                android:textColorHint="@color/colorTextHintReg"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:theme="@style/TextLabel"/>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_last_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorTextHintReg"
            android:textColorHint="@color/colorTextHintReg"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:theme="@style/TextLabel"/>
        <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_phone_number"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorTextHintReg"
            android:textColorHint="@color/colorTextHintReg"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:theme="@style/TextLabel"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorTextHintReg"
            android:textColorHint="@color/colorTextHintReg"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:theme="@style/TextLabel"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleTint="@color/colorText"
            />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorTextHintReg"
            android:textColorHint="@color/colorTextHintReg"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:theme="@style/TextLabel"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_confirm_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleTint="@color/colorText"
            android:layout_marginTop="10dp"/>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/text_input_edit_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/colorTextHintReg"
        android:textColorHint="@color/colorTextHintReg"
        android:theme="@style/TextLabel"
        android:layout_above="@+id/appCompatButtonRegister"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextHint"
        android:text="@string/text_register"
        android:textColor="@color/colorText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>

